<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="app_name">Textgram</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Textgram</string>
    <string name="type_your_text_below">What are you thinking ?</string>
    <string name="type_your_text_here">Type your thoughts here...</string>
    <string name="button_hide">Hide</string>
    <string name="button_next">Next</string>
    <string name="button_back">Back</string>
    <string name="button_about">About</string>
    <string name="styling_hello">Hi!</string>
    <string name="styling_templates">Templates</string>
    <string name="styling_stickers">Stickers</string>
    <string name="styling_backgrounds">Backgrounds</string>
    <string name="styling_fonts">Fonts</string>
    <string name="styling_text">Text Effects</string>
    <string name="styling_filters">Filters</string>
    <string name="styling_frames">Frames</string>
    <string name="button_edit_text">Edit Text</string>
    <string name="button_radnomize">Randomize</string>
    <string name="button_reset">Reset</string>
    <string name="button_update_text">Update Text</string>
    <string name="image_selected_too_large">The selected image is too large.</string>
    <string name="button_text_color">Color</string>
    <string name="button_text_shadow">Shadow</string>
    <string name="button_text_reflection">Reflection</string>
    <string name="button_text_opacity">Opacity</string>
    <string name="button_text_size">Size</string>
    <string name="button_text_linespacing">Line Spacing</string>
    <string name="button_close">Close</string>
    <string name="button_store_get_more">Get More</string>
    <string name="text_opacity">Text Opacity</string>
    <string name="text_reflection">Text Reflection</string>
    <string name="text_size">Text Size</string>
    <string name="text_linespacing">Line Spacing</string>
    <string name="filter_options_opacity">Filter Opacity</string>
    <string name="save_btn">Save</string>
    <string name="share_btn">Share</string>
    <string name="please_wait">Please wait...</string>
    <string name="saved">Saved in your gallery</string>
    <string name="saved_view_q">Would you like to view it?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="error_sdcard">Error while saving.</string>
    <string name="menu_store">Store</string>
    <string name="recommended_apps">Recommended Apps</string>
    <string name="no_internet">You are not connected to the internet.</string>
    <string name="store_home">Home</string>
    <string name="store_new">New Items</string>
    <string name="store_loading_error">"Couldn't connect to the store, please make sure that you are connected to the internet."</string>
    <string name="store_title">Textgram Store</string>
    <string name="pro_message">"In order to keep the application free, it contains some advertisements, if you don't like them, there is a pro version available for $1.45."</string>
    <string name="text_rotation">Text Rotation</string>
    <string name="button_text_rotation">Rotation</string>
    <string name="clear_text">Clear</string>
    <string name="clear_confirmation_message">Are you sure that you want to clear the text?</string>
    <string name="smileys">Emojis</string>
    <string name="choose_template">Choose a Template >></string>
    <string name="new_message">New Message</string>
    <string name="you_are_almost_there">"You're almost there"</string>
    <string name="select_your_gender">Please select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="info_will_help_us">This information will help us in improving the app and providing better content.</string>
    <string name="thank_you">Thank You</string>
    <string name="follow_us">follow us on Facebook and Twitter to get the latest news and updates.</string>
    <string name="start_using_theapp">Start using Textgram</string>
    <string name="remove_ads">REMOVE ADS</string>
    <string name="remove_watermark">REMOVE WATERMARK</string>
    <string name="upgrade">Upgrade</string>
    <string name="full_version">FULL VERSION</string>
    <string name="upgrades">Upgrades</string>
    <string name="promotion_code">Promotion Code</string>
    <string name="apply">Apply</string>
    <string name="invalid_promotion_code">Invalid promotion code.</string>
    <string name="promotion_code_activated">Promotion code activated, the changes will be applied after restarting Textgram.</string>
    <string name="upgrade_purchased">Thank you for your purchase, the changes will be applied after restarting Textgram.</string>
    <string name="pocketchange_rewards">Rewards</string>
    <string name="whats_new_title">"What's New"</string>
    <string name="whatsnew">"- Improved performance

 - More options added in the Templates tab

 - Pocketchange Rewards"</string>
    <string name="add_text">Add Text</string>
    <string name="create_text_box">Create</string>
    <string name="settings">Settings</string>
    <string name="feedback">Feedback</string>
    <string name="feeback_summary">Contact Textgram team.</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="rewards_notifications">Rewards Notifications</string>
    <string name="rewards_notifications_summary">PocketChange Rewards</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="add_the_hashtag">Add the hashtag #textgram to get more likes.</string>
    <string name="styling_highlight">Highlight</string>
    <string name="highlight_opacity">Highlight Opacity</string>
    <string name="get_old_templates_tooltip">"Get the old backgrounds
for free."</string>
    <string name="menu_more">Menu</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>
</resources>
