<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:paddingLeft="5.0sp" android:paddingTop="5.0sp" android:paddingRight="5.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <codeadore.textgram.custom_widgets.NewButton android:textColor="#ff666666" android:id="@id/styling_text_color" android:background="@drawable/btn_holo_round" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/button_text_color" android:lines="1" android:layout_weight="1.0" />
        <codeadore.textgram.custom_widgets.NewButton android:textColor="#ff666666" android:id="@id/styling_text_shadow" android:background="@drawable/btn_holo_round" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/button_text_shadow" android:lines="1" android:layout_weight="1.0" />
        <codeadore.textgram.custom_widgets.NewButton android:textColor="#ff666666" android:id="@id/styling_text_reflection" android:background="@drawable/btn_holo_round" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/button_text_reflection" android:lines="1" android:layout_weight="1.0" />
        <codeadore.textgram.custom_widgets.NewButton android:textColor="#ff666666" android:id="@id/styling_text_opacity" android:background="@drawable/btn_holo_round" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/button_text_opacity" android:lines="1" android:layout_weight="1.0" />
    </LinearLayout>
    <LinearLayout android:paddingLeft="5.0sp" android:paddingRight="5.0sp" android:paddingBottom="5.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <codeadore.textgram.custom_widgets.NewButton android:textColor="#ff666666" android:id="@id/styling_text_size" android:background="@drawable/btn_holo_round" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/button_text_size" android:lines="1" android:layout_weight="1.0" />
        <codeadore.textgram.custom_widgets.NewButton android:textColor="#ff666666" android:id="@id/styling_text_linespacing" android:background="@drawable/btn_holo_round" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/button_text_linespacing" android:lines="1" android:layout_weight="1.0" />
        <codeadore.textgram.custom_widgets.NewButton android:textColor="#ff666666" android:id="@id/styling_text_rotation" android:background="@drawable/btn_holo_round" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/button_text_rotation" android:lines="1" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
