<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffeaeaea" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/gopro_adview_container" android:background="#ff000000" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <Button android:textSize="24.0dip" android:id="@id/fullversion_btn" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/full_version" android:drawableRight="@drawable/coin" />
            <Button android:textSize="24.0dip" android:id="@id/removeads_btn" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/remove_ads" android:drawableRight="@drawable/coin" />
            <Button android:textSize="24.0dip" android:id="@id/removewatermark_btn" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/remove_watermark" android:drawableRight="@drawable/coin" />
            <Button android:textSize="24.0dip" android:id="@id/gopro_btn" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="GO PRO" android:drawableRight="@drawable/coin" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:id="@id/et_promotion_code" android:layout_width="wrap_content" android:layout_height="40.0dip" android:hint="@string/promotion_code" android:lines="1" android:ems="10" android:layout_weight="1.0" android:windowSoftInputMode="stateHidden" />
                <Button android:id="@id/btn_apply_promotion_code" android:background="@drawable/btn_bg" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_margin="0.0dip" android:text="@string/apply" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
